@@ -986,24 +986,48 @@ UINT32 *Template::getDCIEventsList(UINT32 *pdwCount)
  */
 void Template::createNXMPRecord(String &str)
 {
-   str.appendFormattedString(_T("\t\t<template id=\"%d\">\n\t\t\t<name>%s</name>\n\t\t\t<flags>%d</flags>\n\t\t\t<dataCollection>\n"),
+   str.appendFormattedString(_T("\t\t<template id=\"%d\">\n\t\t\t<name>%s</name>\n\t\t\t<flags>%d</flags>\n"),
 	                       m_id, (const TCHAR *)EscapeStringForXML2(m_name), m_flags);
+
+   // Path in groups
+   StringList path;
+   ObjectArray<NetObj> *list = getParentList(OBJECT_TEMPLATEGROUP);
+   TemplateGroup *parent = NULL;
+   while(list->size() > 0)
+   {
+      parent = (TemplateGroup *)list->get(0);
+      path.add(parent->getName());
+      delete list;
+      list = parent->getParentList(OBJECT_TEMPLATEGROUP);
+   }
+   delete list;
+
+   str.append(_T("\t\t\t<path>\n"));
+   for(int j = path.size() - 1, id = 1; j >= 0; j--, id++)
+   {
+      str.append(_T("\t\t\t\t<element id=\""));
+      str.append(id);
+      str.append(_T("\">"));
+      str.append(path.get(j));
+      str.append(_T("</element>\n"));
+   }
+   str.append(_T("\t\t\t</path>\n\t\t\t<dataCollection>\n"));
 
    lockDciAccess(false);
    for(int i = 0; i < m_dcObjects->size(); i++)
       m_dcObjects->get(i)->createNXMPRecord(str);
    unlockDciAccess();
 
-   str += _T("\t\t\t</dataCollection>\n");
+   str.append(_T("\t\t\t</dataCollection>\n"));
 	lockProperties();
 	if (m_applyFilterSource != NULL)
 	{
-		str += _T("\t\t\t<filter>");
+      str.append(_T("\t\t\t<filter>"));
 		str.appendPreallocated(EscapeStringForXML(m_applyFilterSource, -1));
-		str += _T("</filter>\n");
+      str.append(_T("</filter>\n"));
 	}
 	unlockProperties();
-	str += _T("\t\t</template>\n");
+   str.append(_T("\t\t</template>\n"));
 }
 
 /**
